Implement DTOFactory