@@ -2,6 +2,7 @@ package edu.mines.gradingadmin.controllers;
 
 import edu.mines.gradingadmin.api.InstructorApiDelegate;
 import edu.mines.gradingadmin.data.*;
+import edu.mines.gradingadmin.factories.DTOFactory;
 import edu.mines.gradingadmin.managers.SecurityManager;
 import edu.mines.gradingadmin.models.*;
 import edu.mines.gradingadmin.services.CourseMemberService;
@@ -43,34 +44,9 @@ public class InstructorApiImpl implements InstructorApiDelegate {
 
         Set<Section> sections = courseMemberService.getSectionsForUserAndCourse(securityManager.getUser(), course.get());
 
-        CourseDTO courseDTO = new CourseDTO()
-                .id(course.get().getId().toString())
-                .code(course.get().getCode())
-                .name(course.get().getName())
-                .term(course.get().getTerm())
-                .enabled(course.get().isEnabled())
-                .canvasId(course.get().getCanvasId())
-                .assignments(course.get().getAssignments().stream().map(assignment ->
-                    new AssignmentDTO()
-                            .id(assignment.getId().toString())
-                            .name(assignment.getName())
-                            .canvasId(assignment.getCanvasId())
-                            .points(assignment.getPoints())
-                            .dueDate(assignment.getDueDate())
-                            .unlockDate(assignment.getUnlockDate())
-                            .category(assignment.getCategory())
-                            .groupAssignment(assignment.isGroupAssignment())
-                            .attentionRequired(assignment.isAttentionRequired())
-                            // need to add external source config
-                            .enabled(assignment.isEnabled())
-                            ).toList())
-                .members(sections.stream().map(Section::getMembers).flatMap(Set::stream).map(member ->
-                    new CourseMemberDTO()
-                        .canvasId(member.getCanvasId())
-                        .courseRole(CourseMemberDTO.CourseRoleEnum.fromValue(member.getRole().getRole()))
-                        .cwid(member.getUser().getCwid())
-                        .sections(member.getSections().stream().map(Section::getName).toList()))
-                    .collect(toList()))
+        CourseDTO courseDTO = DTOFactory.toDto(course.get())
+                .assignments(course.get().getAssignments().stream().map(DTOFactory::toDto).toList())
+                .members(sections.stream().map(Section::getMembers).flatMap(Set::stream).map(DTOFactory::toDto).collect(toList()))
                 .sections(sections.stream().map(Section::getName).toList());
 
         return ResponseEntity.ok(courseDTO);
@@ -84,28 +60,13 @@ public class InstructorApiImpl implements InstructorApiDelegate {
             return ResponseEntity.badRequest().build();
         }
 
-        return ResponseEntity.status(HttpStatus.CREATED).body(policy.map(p -> new PolicyDTO()
-                .course(new CourseDTO()
-                        .id(p.getCourse().getId().toString())
-                        .name(p.getCourse().getName())
-                        .code(p.getCourse().getCode())
-                )
-                .name(p.getPolicyName())
-                .uri(p.getPolicyURI())
-        ).get());
+        return ResponseEntity.status(HttpStatus.CREATED).body(DTOFactory.toDto(policy.get()));
     }
 
     @Override
     public ResponseEntity<List<PolicyDTO>> getAllPolicies(String courseId) {
         List<Policy> policies = courseService.getAllPolicies(UUID.fromString(courseId));
-        return ResponseEntity.ok(policies.stream().map(p -> new PolicyDTO()
-                .course(new CourseDTO()
-                        .id(p.getCourse().getId().toString())
-                        .name(p.getCourse().getName())
-                        .code(p.getCourse().getCode())
-                )
-                .name(p.getPolicyName())
-                .uri(p.getPolicyURI())).toList());
+        return ResponseEntity.ok(policies.stream().map(DTOFactory::toDto).toList());
     }
 
     @Override
@@ -122,18 +83,15 @@ public class InstructorApiImpl implements InstructorApiDelegate {
             return ResponseEntity.badRequest().build();
         }
 
-        return ResponseEntity.ok(courseMemberService.searchCourseMembers(course.get(), List.of(), name, cwid).stream()
-                .map(member -> new CourseMemberDTO()
-                        .canvasId(member.getCanvasId())
-                        .courseRole(CourseMemberDTO.CourseRoleEnum.fromValue(member.getRole().getRole()))
-                        .cwid(member.getUser().getCwid())
-                        .sections(member.getSections().stream().map(Section::getName).toList()))
-                .toList());
+        return ResponseEntity.ok(courseMemberService.searchCourseMembers(course.get(), List.of(), name, cwid)
+            .stream().map(DTOFactory::toDto).toList());
     }
 
     @Override
     public ResponseEntity<List<MasterMigrationDTO>> getAllMasterMigrationsForCourse(String courseId){
         List<MasterMigration> masterMigrations = migrationService.getAllMasterMigrations(courseId);
+
+        // TODO clean this up
         return ResponseEntity.ok(masterMigrations.stream().map(
                 mastermigration -> new MasterMigrationDTO()
                         .migrationList( mastermigration.getMigrations().stream().map(
